gen/SpecLangParser.java
// Generated from C:/Users/Emery/PycharmProjects/SpecularLang/SpecularLang\SpecLangParser.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SpecLangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INDENT=1, DEDENT=2, NEWLINE=3, LEFT_BRACKET=4, RIGHT_BRACKET=5, COMMA=6, 
		START=7, SET=8, IF=9, WHILE=10, DO_Upper=11, ACTOR_NAME=12, WS=13, OPEN_PARAN=14, 
		CLOSE_PARAN=15, SAYS=16, GLOBALLY=17, DO_Lower=18, OTHERWISE=19, AND=20, 
		OR=21, NOT=22, MUL=23, DIV=24, ADD=25, SUB=26, EQUAL_TO=27, GREATER_THAN=28, 
		LESS_THAN=29, IS=30, TRUE=31, FALSE=32, NONE=33, ID=34, STRING=35, NUMBER=36, 
		C_WS=37, EMOTION_START=38, DS_WS=39, EMOTION=40, EMOTION_END=41, ANYCHAR=42;
	public static final int
		RULE_program = 0, RULE_scene_statement = 1, RULE_block = 2, RULE_simple_statement = 3, 
		RULE_complex_statement = 4, RULE_dialog = 5, RULE_emotion = 6, RULE_custom_statement = 7, 
		RULE_assignment = 8, RULE_ifstatement = 9, RULE_whileLoop = 10, RULE_else_statement = 11, 
		RULE_expression = 12, RULE_or_equal_to_modifier = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "scene_statement", "block", "simple_statement", "complex_statement", 
			"dialog", "emotion", "custom_statement", "assignment", "ifstatement", 
			"whileLoop", "else_statement", "expression", "or_equal_to_modifier"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'{'", "'}'", "','", "'Start'", "'Set'", "'If'", 
			"'While'", "'Do'", null, null, null, null, "'says'", "'globally'", "'do'", 
			"'Otherwise'", "'and'", "'or'", "'not'", "'*'", "'/'", "'+'", "'-'", 
			"'equal to'", "'greater than'", "'less than'", "'is'", "'true'", "'false'", 
			"'none'", null, null, null, null, null, null, null, null, "'Hello World'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INDENT", "DEDENT", "NEWLINE", "LEFT_BRACKET", "RIGHT_BRACKET", 
			"COMMA", "START", "SET", "IF", "WHILE", "DO_Upper", "ACTOR_NAME", "WS", 
			"OPEN_PARAN", "CLOSE_PARAN", "SAYS", "GLOBALLY", "DO_Lower", "OTHERWISE", 
			"AND", "OR", "NOT", "MUL", "DIV", "ADD", "SUB", "EQUAL_TO", "GREATER_THAN", 
			"LESS_THAN", "IS", "TRUE", "FALSE", "NONE", "ID", "STRING", "NUMBER", 
			"C_WS", "EMOTION_START", "DS_WS", "EMOTION", "EMOTION_END", "ANYCHAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SpecLangParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SpecLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public List<Scene_statementContext> scene_statement() {
			return getRuleContexts(Scene_statementContext.class);
		}
		public Scene_statementContext scene_statement(int i) {
			return getRuleContext(Scene_statementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecLangParserListener ) ((SpecLangParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecLangParserListener ) ((SpecLangParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecLangParserVisitor ) return ((SpecLangParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(29); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(28);
				scene_statement();
				}
				}
				setState(31); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==START );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Scene_statementContext extends ParserRuleContext {
		public TerminalNode START() { return getToken(SpecLangParser.START, 0); }
		public TerminalNode ID() { return getToken(SpecLangParser.ID, 0); }
		public TerminalNode INDENT() { return getToken(SpecLangParser.INDENT, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode DEDENT() { return getToken(SpecLangParser.DEDENT, 0); }
		public Scene_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scene_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecLangParserListener ) ((SpecLangParserListener)listener).enterScene_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecLangParserListener ) ((SpecLangParserListener)listener).exitScene_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecLangParserVisitor ) return ((SpecLangParserVisitor<? extends T>)visitor).visitScene_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Scene_statementContext scene_statement() throws RecognitionException {
		Scene_statementContext _localctx = new Scene_statementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_scene_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(33);
			match(START);
			setState(34);
			match(ID);
			setState(35);
			match(INDENT);
			setState(36);
			block();
			setState(37);
			match(DEDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public Simple_statementContext simple_statement() {
			return getRuleContext(Simple_statementContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(SpecLangParser.NEWLINE, 0); }
		public Complex_statementContext complex_statement() {
			return getRuleContext(Complex_statementContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecLangParserListener ) ((SpecLangParserListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecLangParserListener ) ((SpecLangParserListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecLangParserVisitor ) return ((SpecLangParserVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SET:
			case DO_Upper:
			case ACTOR_NAME:
				{
				setState(39);
				simple_statement();
				setState(40);
				match(NEWLINE);
				}
				break;
			case IF:
			case WHILE:
				{
				setState(42);
				complex_statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(46);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SET) | (1L << IF) | (1L << WHILE) | (1L << DO_Upper) | (1L << ACTOR_NAME))) != 0)) {
				{
				setState(45);
				block();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Simple_statementContext extends ParserRuleContext {
		public DialogContext dialog() {
			return getRuleContext(DialogContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public Custom_statementContext custom_statement() {
			return getRuleContext(Custom_statementContext.class,0);
		}
		public Simple_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simple_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecLangParserListener ) ((SpecLangParserListener)listener).enterSimple_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecLangParserListener ) ((SpecLangParserListener)listener).exitSimple_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecLangParserVisitor ) return ((SpecLangParserVisitor<? extends T>)visitor).visitSimple_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Simple_statementContext simple_statement() throws RecognitionException {
		Simple_statementContext _localctx = new Simple_statementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_simple_statement);
		try {
			setState(51);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ACTOR_NAME:
				enterOuterAlt(_localctx, 1);
				{
				setState(48);
				dialog();
				}
				break;
			case SET:
				enterOuterAlt(_localctx, 2);
				{
				setState(49);
				assignment();
				}
				break;
			case DO_Upper:
				enterOuterAlt(_localctx, 3);
				{
				setState(50);
				custom_statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Complex_statementContext extends ParserRuleContext {
		public IfstatementContext ifstatement() {
			return getRuleContext(IfstatementContext.class,0);
		}
		public WhileLoopContext whileLoop() {
			return getRuleContext(WhileLoopContext.class,0);
		}
		public Complex_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_complex_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecLangParserListener ) ((SpecLangParserListener)listener).enterComplex_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecLangParserListener ) ((SpecLangParserListener)listener).exitComplex_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecLangParserVisitor ) return ((SpecLangParserVisitor<? extends T>)visitor).visitComplex_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Complex_statementContext complex_statement() throws RecognitionException {
		Complex_statementContext _localctx = new Complex_statementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_complex_statement);
		try {
			setState(55);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IF:
				enterOuterAlt(_localctx, 1);
				{
				setState(53);
				ifstatement();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 2);
				{
				setState(54);
				whileLoop();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DialogContext extends ParserRuleContext {
		public TerminalNode ACTOR_NAME() { return getToken(SpecLangParser.ACTOR_NAME, 0); }
		public EmotionContext emotion() {
			return getRuleContext(EmotionContext.class,0);
		}
		public TerminalNode INDENT() { return getToken(SpecLangParser.INDENT, 0); }
		public TerminalNode ANYCHAR() { return getToken(SpecLangParser.ANYCHAR, 0); }
		public TerminalNode DEDENT() { return getToken(SpecLangParser.DEDENT, 0); }
		public DialogContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dialog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecLangParserListener ) ((SpecLangParserListener)listener).enterDialog(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecLangParserListener ) ((SpecLangParserListener)listener).exitDialog(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecLangParserVisitor ) return ((SpecLangParserVisitor<? extends T>)visitor).visitDialog(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DialogContext dialog() throws RecognitionException {
		DialogContext _localctx = new DialogContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_dialog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			match(ACTOR_NAME);
			setState(58);
			emotion();
			setState(59);
			match(INDENT);
			setState(60);
			match(ANYCHAR);
			setState(61);
			match(DEDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EmotionContext extends ParserRuleContext {
		public TerminalNode EMOTION_START() { return getToken(SpecLangParser.EMOTION_START, 0); }
		public TerminalNode EMOTION() { return getToken(SpecLangParser.EMOTION, 0); }
		public TerminalNode EMOTION_END() { return getToken(SpecLangParser.EMOTION_END, 0); }
		public EmotionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_emotion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecLangParserListener ) ((SpecLangParserListener)listener).enterEmotion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecLangParserListener ) ((SpecLangParserListener)listener).exitEmotion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecLangParserVisitor ) return ((SpecLangParserVisitor<? extends T>)visitor).visitEmotion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EmotionContext emotion() throws RecognitionException {
		EmotionContext _localctx = new EmotionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_emotion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(EMOTION_START);
			setState(64);
			match(EMOTION);
			setState(65);
			match(EMOTION_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Custom_statementContext extends ParserRuleContext {
		public TerminalNode DO_Upper() { return getToken(SpecLangParser.DO_Upper, 0); }
		public List<TerminalNode> STRING() { return getTokens(SpecLangParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(SpecLangParser.STRING, i);
		}
		public TerminalNode INDENT() { return getToken(SpecLangParser.INDENT, 0); }
		public TerminalNode DEDENT() { return getToken(SpecLangParser.DEDENT, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(SpecLangParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(SpecLangParser.NEWLINE, i);
		}
		public Custom_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_custom_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecLangParserListener ) ((SpecLangParserListener)listener).enterCustom_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecLangParserListener ) ((SpecLangParserListener)listener).exitCustom_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecLangParserVisitor ) return ((SpecLangParserVisitor<? extends T>)visitor).visitCustom_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Custom_statementContext custom_statement() throws RecognitionException {
		Custom_statementContext _localctx = new Custom_statementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_custom_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(DO_Upper);
			setState(68);
			match(STRING);
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INDENT) {
				{
				setState(69);
				match(INDENT);
				setState(70);
				match(STRING);
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NEWLINE) {
					{
					{
					setState(71);
					match(NEWLINE);
					setState(72);
					match(STRING);
					}
					}
					setState(77);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(78);
				match(DEDENT);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public TerminalNode SET() { return getToken(SpecLangParser.SET, 0); }
		public TerminalNode ID() { return getToken(SpecLangParser.ID, 0); }
		public TerminalNode EQUAL_TO() { return getToken(SpecLangParser.EQUAL_TO, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode GLOBALLY() { return getToken(SpecLangParser.GLOBALLY, 0); }
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecLangParserListener ) ((SpecLangParserListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecLangParserListener ) ((SpecLangParserListener)listener).exitAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecLangParserVisitor ) return ((SpecLangParserVisitor<? extends T>)visitor).visitAssignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_assignment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(SET);
			setState(82);
			match(ID);
			setState(83);
			match(EQUAL_TO);
			setState(84);
			expression(0);
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==GLOBALLY) {
				{
				setState(85);
				match(GLOBALLY);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfstatementContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(SpecLangParser.IF, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode INDENT() { return getToken(SpecLangParser.INDENT, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode DEDENT() { return getToken(SpecLangParser.DEDENT, 0); }
		public Else_statementContext else_statement() {
			return getRuleContext(Else_statementContext.class,0);
		}
		public IfstatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifstatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecLangParserListener ) ((SpecLangParserListener)listener).enterIfstatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecLangParserListener ) ((SpecLangParserListener)listener).exitIfstatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecLangParserVisitor ) return ((SpecLangParserVisitor<? extends T>)visitor).visitIfstatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfstatementContext ifstatement() throws RecognitionException {
		IfstatementContext _localctx = new IfstatementContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_ifstatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(IF);
			setState(89);
			expression(0);
			setState(90);
			match(INDENT);
			setState(91);
			block();
			setState(92);
			match(DEDENT);
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OTHERWISE) {
				{
				setState(93);
				else_statement();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhileLoopContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(SpecLangParser.WHILE, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode INDENT() { return getToken(SpecLangParser.INDENT, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode DEDENT() { return getToken(SpecLangParser.DEDENT, 0); }
		public WhileLoopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileLoop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecLangParserListener ) ((SpecLangParserListener)listener).enterWhileLoop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecLangParserListener ) ((SpecLangParserListener)listener).exitWhileLoop(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecLangParserVisitor ) return ((SpecLangParserVisitor<? extends T>)visitor).visitWhileLoop(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WhileLoopContext whileLoop() throws RecognitionException {
		WhileLoopContext _localctx = new WhileLoopContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_whileLoop);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(WHILE);
			setState(97);
			expression(0);
			setState(98);
			match(INDENT);
			setState(99);
			block();
			setState(100);
			match(DEDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Else_statementContext extends ParserRuleContext {
		public TerminalNode OTHERWISE() { return getToken(SpecLangParser.OTHERWISE, 0); }
		public TerminalNode INDENT() { return getToken(SpecLangParser.INDENT, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode DEDENT() { return getToken(SpecLangParser.DEDENT, 0); }
		public Else_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_else_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecLangParserListener ) ((SpecLangParserListener)listener).enterElse_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecLangParserListener ) ((SpecLangParserListener)listener).exitElse_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecLangParserVisitor ) return ((SpecLangParserVisitor<? extends T>)visitor).visitElse_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Else_statementContext else_statement() throws RecognitionException {
		Else_statementContext _localctx = new Else_statementContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_else_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(OTHERWISE);
			setState(103);
			match(INDENT);
			setState(104);
			block();
			setState(105);
			match(DEDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
